[gd_scene load_steps=6 format=3 uid="uid://b6idqkaxi3haq"]

[ext_resource type="Script" path="res://Scenes/Minigames/picking_lock.gd" id="1_2mrbb"]
[ext_resource type="Texture2D" uid="uid://dm8fm1exirudx" path="res://icon.svg" id="2_pmc2h"]
[ext_resource type="Theme" uid="uid://rgti8qus1ahc" path="res://base_theme1.tres" id="3_1r2j0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xwvyq"]
size = Vector2(860, 560)

[sub_resource type="CircleShape2D" id="CircleShape2D_edrob"]
radius = 30.0

[node name="Lockpick" type="Node2D"]
script = ExtResource("1_2mrbb")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -360.0
offset_right = 640.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.262745, 0.262745, 0.262745, 1)

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-64, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_xwvyq")

[node name="ColorRect2" type="ColorRect" parent="Area2D"]
anchors_preset = -1
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -495.0
offset_top = -345.0
offset_right = 495.0
offset_bottom = 345.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.337255, 0.278431, 0.113725, 1)

[node name="MarginContainer" type="MarginContainer" parent="Area2D/ColorRect2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="ColorRect" type="ColorRect" parent="Area2D/ColorRect2/MarginContainer"]
layout_mode = 2
mouse_filter = 2
color = Color(0.156863, 0.152941, 0.141176, 0.898039)

[node name="Button" type="Area2D" parent="."]
position = Vector2(-64, 0)

[node name="Sprite2D" type="Sprite2D" parent="Button"]
scale = Vector2(0.36, 0.36)
texture = ExtResource("2_pmc2h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Button"]
shape = SubResource("CircleShape2D_edrob")

[node name="VSlider" type="VSlider" parent="."]
offset_left = 500.0
offset_top = -338.0
offset_right = 554.0
offset_bottom = 340.0
mouse_filter = 2
theme = ExtResource("3_1r2j0")
max_value = 20.0
step = 0.02
value = 10.0
editable = false
scrollable = false

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="mouse_entered" from="Button" to="." method="mouse_check_inverter"]
[connection signal="mouse_exited" from="Button" to="." method="mouse_check_inverter"]
